objects/SFDC_Purchase_Order__c/SFDC_Purchase_Order__c.object-meta.xml
<CustomObject>
    <description>Track the lifestyle of a Purchase Order, as it starts as a purchase request and becomes a fully-approved PO. Associate this with a specific cost center and Invoices.</description>
    <label>Supplier Purchase Order</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>