objects/SFDC_Purchase_Order__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Enter numerical amount.</inlineHelpText>
    <label>Amount - 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>