objects/SFDC_Purchase_Order__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <inlineHelpText>Select your name.</inlineHelpText>
    <label>Created By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adrian Warne</fullName>
            </value>
            <value>
                <fullName>Anne Bassinder</fullName>
            </value>
            <value>
                <fullName>Darran Crompton</fullName>
            </value>
            <value>
                <fullName>Diana Pascoe</fullName>
            </value>
            <value>
                <fullName>Joanna Fyffe</fullName>
            </value>
            <value>
                <fullName>Joel Bidmead</fullName>
            </value>
            <value>
                <fullName>Kath Hewitt</fullName>
            </value>
            <value>
                <fullName>Laura Borthwick</fullName>
            </value>
            <value>
                <fullName>Michelle Bassinder</fullName>
            </value>
            <value>
                <fullName>Natasha Blake</fullName>
            </value>
            <value>
                <fullName>Nicki Pratten</fullName>
            </value>
            <value>
                <fullName>Nigel Welch</fullName>
            </value>
            <value>
                <fullName>Paul Faraway</fullName>
            </value>
            <value>
                <fullName>Phil Bassinder</fullName>
            </value>
            <value>
                <fullName>Rachel Dowrick</fullName>
            </value>
            <value>
                <fullName>Reuben Bidmead</fullName>
            </value>
            <value>
                <fullName>Samantha Cavinder</fullName>
            </value>
            <value>
                <fullName>Samantha Spencer</fullName>
            </value>
            <value>
                <fullName>Sarah Bayley</fullName>
            </value>
            <value>
                <fullName>Sharon Standen</fullName>
            </value>
            <value>
                <fullName>Susie May</fullName>
            </value>
            <value>
                <fullName>Tim Lyon</fullName>
            </value>
            <value>
                <fullName>Tracey Coles</fullName>
            </value>
            <value>
                <fullName>Vern Bristow</fullName>
            </value>
            <value>
                <fullName>Viv Stuchbery</fullName>
            </value>
            <value>
                <fullName>Warren Bidmead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>