objects/SFDC_Purchase_Order__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <inlineHelpText>Enter the department you are raising the P/O for.</inlineHelpText>
    <label>Department</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>IT &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service - North</fullName>
            </value>
            <value>
                <fullName>Service - North Reactive</fullName>
            </value>
            <value>
                <fullName>Service - North Small Works</fullName>
            </value>
            <value>
                <fullName>Service - South</fullName>
            </value>
            <value>
                <fullName>Service - South Reactive</fullName>
            </value>
            <value>
                <fullName>Service - South Small Works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>