objects/SFDC_Purchase_Order__c/fields/Discount_Given__c.field-meta.xml
<CustomField>
    <fullName>Discount_Given__c</fullName>
    <label>Discount Given</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>