objects/SFDC_Purchase_Order__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <inlineHelpText>Enter in the supplier invoice number here to close the P/O off.</inlineHelpText>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>