objects/SFDC_Purchase_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supplier Purchase Orders</relationshipLabel>
    <relationshipName>Supplier_Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>