objects/SFDC_Purchase_Order__c/fields/PO_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Sign_Date__c</fullName>
    <label>PO Sign Date</label>
    <type>Date</type>
</CustomField>