objects/SFDC_Purchase_Order__c/fields/Purchase_Description_2__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Description_2__c</fullName>
    <label>Purchase Description - 2</label>
    <type>TextArea</type>
</CustomField>