objects/SFDC_Purchase_Order__c/fields/Purchase_Description_3__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Description_3__c</fullName>
    <label>Purchase Description - 3</label>
    <type>TextArea</type>
</CustomField>