objects/SFDC_Purchase_Order__c/fields/Purchase_Description_4__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Description_4__c</fullName>
    <label>Purchase Description - 4</label>
    <type>TextArea</type>
</CustomField>