objects/SFDC_Purchase_Order__c/fields/Purchase_Description__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Description__c</fullName>
    <inlineHelpText>Include as much detail as possible, including adding notes / attachments as applicable.</inlineHelpText>
    <label>Purchase Description - 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>