objects/SFDC_Purchase_Order__c/fields/Purchase_Ledger_Comments__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Ledger_Comments__c</fullName>
    <label>Purchase Ledger Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>