objects/SFDC_Purchase_Order__c/fields/Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>R00N40000001Q7F1EAK</relationshipName>
    <type>Lookup</type>
</CustomField>