objects/SFDC_Purchase_Order__c/fields/requestor__c.field-meta.xml
<CustomField>
    <fullName>requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the name of the login requesting this P/O.</inlineHelpText>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N40000001Q7F5EAK</relationshipName>
    <type>Lookup</type>
</CustomField>