objects/SFDC_Purchase_Order__c/fields/Shipping_Province_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Province_Zip__c</fullName>
    <label>Shipping Province/Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>