objects/SFDC_Purchase_Order__c/fields/Sign__c.field-meta.xml
<CustomField>
    <fullName>Sign__c</fullName>
    <inlineHelpText>This is to only be used for manual signing when the P/O is printed using the Printable View.</inlineHelpText>
    <label>Sign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>