objects/SFDC_Purchase_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requisition Submitted</fullName>
            </value>
            <value>
                <fullName>Requisition Approved</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Vendor Selected</fullName>
            </value>
            <value>
                <fullName>W9 Draft</fullName>
            </value>
            <value>
                <fullName>Purchase Order Drafted</fullName>
            </value>
            <value>
                <fullName>Purchase Order Executed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Purchase Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>