objects/SFDC_Purchase_Order__c/fields/Supplier1__c.field-meta.xml
<CustomField>
    <fullName>Supplier1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search and select the relevant Supplier, if you cannot find the one you need, use the Supplier Pending Creation Supplier, and enter the name of the Supplier in the Branch field, then ask Accounts to setup the new Supplier, and assign this P/O to it.</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>