objects/SFDC_Purchase_Order__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <label>Tel:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>