objects/SFDC_Purchase_Order__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Total Amount of All Purchase Description&apos;s Amount</description>
    <formula>Amount__c  +  Amount_2__c  +  Amount_3__c  +  Amount_4__c  +  Amount_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>