objects/SFDC_Purchase_Order__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Visit this P/O relates to, if applicable.</inlineHelpText>
    <label>Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>