objects/SFDC_Purchase_Order__c/validationRules/Purchase_Description_1_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Description_1_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISBLANK(Purchase_Description__c),
ISBLANK(Amount__c))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Please Enter the Amount of the Purchase Description 1</errorMessage>
</ValidationRule>