objects/SFDC_Purchase_Order__c/validationRules/Purchase_Description_3_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Description_3_Amount_Required</fullName>
    <active>true</active>
    <description>Purchase Description 3 is filled the corresponding Amount - 3 is required.</description>
    <errorConditionFormula>AND(!ISBLANK(Purchase_Description_3__c),
ISBLANK(Amount_3__c))</errorConditionFormula>
    <errorDisplayField>Amount_3__c</errorDisplayField>
    <errorMessage>Please Enter the Amount of Purchase Description 3</errorMessage>
</ValidationRule>