objects/SFDC_Purchase_Order__c/validationRules/Purchase_Description_4_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Description_4_Amount_Required</fullName>
    <active>true</active>
    <description>Purchase Description - 4 is filled the corresponding Amount - 4 is Required.</description>
    <errorConditionFormula>AND(!ISBLANK(Purchase_Description_4__c),
ISBLANK(Amount_4__c))</errorConditionFormula>
    <errorDisplayField>Amount_4__c</errorDisplayField>
    <errorMessage>Please Enter the Amount for Purchase Description 4</errorMessage>
</ValidationRule>