objects/SFDC_Purchase_Order__c/listViews/All_Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>All_Purchase_Orders</fullName>
    <columns>NAME</columns>
    <columns>Supplier1__c</columns>
    <columns>Branch__c</columns>
    <columns>Purchase_Description__c</columns>
    <columns>Visit__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Created_By__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Comments__c</columns>
    <columns>Created_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Purchase Orders</label>
</ListView>